--- a/visual.css
+++ b/visual.css
@@ -116,7 +116,8 @@ button{
     border:none;
     border-radius: 20%;
     background-color: #e31474;
-    margin: auto;
+    margin: 0px 50% 0px 50%;
+
 }
 #botao:hover{
     background-color: #A60A43;
@@ -222,7 +223,8 @@ hr{
 }
 #autorize{
     font-size: 50%;
-    margin: auto;
+    margin: 20px 0px 10px 0px;
+    position: absolute;
 }
 /*imagens*/
 #amoeba, #amoeba2{
